overlays/uksouth-prod/devops/bridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bridge
  name: bridge
  namespace: default
spec:
  ports:
    - name: tcp
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: bridge
  sessionAffinity: None
  type: ClusterIP
