overlays/uksouth-prod/devops/bridge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Host bridge.gb.bink.com;
  name: bridge.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: bridge.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bridge
                port:
                  number: 80
  tls:
    - hosts:
        - bridge.${cluster_name}.${cluster_location}.bink.sh
